Fix bug where display collapses when no number is displayed

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     align-items: flex-end;
     flex-wrap:wrap;
     max-width:100%;
+    min-height:20%
 }
 
 .displayOutput {
